creusot/tests/should_fail/prusti/deny_zombies/old_deref.stderr
error: std::boxed::Box<T>@'old cannot be moved to 'curr since it isn't copy
       otherwise it would become a zombie
 --> old_deref.rs:5:12
  |
5 | #[ensures(*old(x) == *result)]
  |            ^^^^^^
  |
note: the lint level is defined here
 --> old_deref.rs:1:9
  |
1 | #![deny(creusot::prusti_zombie)]
  |         ^^^^^^^^^^^^^^^^^^^^^^

error[creusot]: invalid box dereference of expression with home `'old` at time-slice `'curr`
 --> old_deref.rs:5:12
  |
5 | #[ensures(*old(x) == *result)]
  |            ^^^^^^

error: aborting due to 2 previous errors

